[project]
name = "erm"
version = "0.1.0"
description = ""
authors = [
    {name = "Meghana Patakota",email = "megpatakota@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
